--- a/Android Client/Objects/AndroidManifest.xml
+++ b/Android Client/Objects/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	package="cloyd.home.monitor"
+	package="cloyd.home.weather.station"
 	android:versionCode="1"
 	android:versionName="1.0"
 	android:installLocation="internalOnly">
@@ -14,13 +14,13 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<application
 		android:icon="@drawable/icon"
-		android:label="Cloyd Home Monitor"
+		android:label="Home Weather Station"
 		android:theme="@style/MyAppTheme">
 		<activity
 			android:windowSoftInputMode="stateHidden"
 			android:launchMode="singleTop"
 			android:name=".main"
-			android:label="Cloyd Home Monitor"
+			android:label="Home Weather Station"
 			android:screenOrientation="portrait">
 			<intent-filter>
 			   <action android:name="android.intent.action.MAIN" />
