--- a/Android Client/Objects/AndroidManifest.xml
+++ b/Android Client/Objects/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="cloyd.smart.home.monitor"
-	android:versionCode="194"
-	android:versionName="1.9.4"
+	android:versionCode="19"
+	android:versionName="1.9.5"
 	android:installLocation="internalOnly">
 	
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="26"/>
@@ -21,7 +21,7 @@
 		android:theme="@style/MyAppTheme">
 		
 		<service android:name="anywheresoftware.b4a.objects.NotificationListenerWrapper"
-		   android:label="Smart Home Monitor Notification Listener"
+		   android:label="Smart Home Monitor"
 		  android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
 		  <intent-filter>
 		  <action android:name="android.service.notification.NotificationListenerService" />
