--- a/Android Client/Objects/AndroidManifest.xml
+++ b/Android Client/Objects/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="cloyd.smart.home.monitor"
-	android:versionCode="1987"
-	android:versionName="1.9.8.7"
+	android:versionCode="1988"
+	android:versionName="1.9.8.8"
 	android:installLocation="internalOnly">
 	
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="26"/>
@@ -28,7 +28,7 @@
 		  </intent-filter>
 		</service>
 		<activity
-		  android:name="anywheresoftware.b4a.objects.preferenceactivity"
+		  android:name="de.amberhome.objects.preferenceactivity"
 		  android:theme="@android:style/Theme.Material.Light">
 		</activity>
 		<activity
