--- a/Android Client/Objects/AndroidManifest.xml
+++ b/Android Client/Objects/AndroidManifest.xml
@@ -11,6 +11,9 @@
 	    android:normalScreens="true" 
 	    android:smallScreens="true" 
 	    android:anyDensity="true"/>
+	<uses-permission
+	  android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+	  android:maxSdkVersion="18" />
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
