Updated living room chart to support dynamic temperature values

--- a/Living Room Temp and Humidity Chart/Objects/AndroidManifest.xml
+++ b/Living Room Temp and Humidity Chart/Objects/AndroidManifest.xml
@@ -13,6 +13,7 @@
 	    android:anyDensity="true"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 	<application
 		android:icon="@drawable/icon"
 		android:label="Living Area Chart"
